crates/host-macros/tests/compile_fail/unknown_key.rs
omnia_host_macros::runtime!({
    guests: {},
});

fn main() {}
