crates/host-macros/tests/compile_fail/unknown_key.stderr
error: expected `mode` or `hosts`
 --> tests/compile_fail/unknown_key.rs:2:5
  |
2 |     guests: {},
  |     ^^^^^^
